--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
     "expo": "~50.0.11",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "^16.0.8",
     "expo-status-bar": "~1.11.1",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-pdf": "^6.7.4",
+    "react-native-pdf-lib": "^1.0.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
